# formicaio_code

./: README.md  code_base.py  index.html  interface.html  live_agent.js  pyproject.toml  requirements.txt
api_bridge/: script.js
asset/css/: styles.css  styles_landing.css
formicaio_venv/: pyvenv.cfg
local_test/website_page/: index.html
local_test/website_page/api_bridge/: Procfile  code_base.py  live_agent.js  requirements.txt
website_page/: Procfile  README.md  code_base.py  index.html  landing_page.html  openai.env  pyproject.toml  requirements.txt
website_page/api_bridge/: script.js
website_page/asset/css/: styles.css  styles_landing.css
